update: use model react instead custom react